egui_commonmark_macros/tests/fail/incorrect_type.stderr
error[E0308]: mismatched types
 --> tests/fail/incorrect_type.rs:7:17
  |
7 |     commonmark!(x, &mut cache, "# Hello");
  |     ------------^------------------------
  |     |           |
  |     |           expected `&mut Ui`, found integer
  |     expected due to this
